<?xml version="1.0"?>
<package format="2">
  <name>dummy_simulator</name>
  <version>0.0.0</version>
  <description>The dummy_simulator package</description>

  <maintainer email="sunke.polyu@gmail.com">Ke Sun</maintainer>
  <author email="sunke.polyu@gmail.com">Ke Sun</author>
  <license>General Public License V3.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>

  </export>
</package>
